chore(deps): update all major dependencies (major)